# EthernetIP-Scale

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.cache/clangd/index/: acd.c.7EA45FBB6AF85728.idx  acd.h.E30841A1BF7AB139.idx  acd.h.FF7EB572D4AE048D.idx  altcp.h.BD436E2BC2565D6D.idx  api.h.301DD340075A16C7.idx  api_lib.c.5A9401ABDDF3EC71.idx  api_msg.c.9BCD3FFC827A8CBF.idx  api_msg.h.4EF4C2AE4C46B339.idx  appcontype.c.A591A61FBCA20317.idx  appcontype.h.EC08C6A4C3E5C94A.idx  arc4.c.1F1B29094AF927EF.idx  arch.h.C58D2F05C53BC55C.idx  auth.c.3567C9497594298A.idx  autoip.c.837A9341B81EBF4F.idx  autoip.h.2EFD3B6C1C14636E.idx  autoip.h.E6C6CFC875E25128.idx  bridgeif.c.A6EEDF679C1A444C.idx  (+307 more)
WinUI-EIPScale/: .gitignore  API_Endpoints.md  README.md
WinUI-EIPScale/WinUIEIP/: App.xaml  App.xaml.cs  EulerLink.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  WinUIEIP.csproj
components/nau7802/: nau7802.c  nau7802_calibration_storage.c
components/opener/: CMakeLists.txt
components/system_config/: mcp_config.c  system_config.c
components/webui/: CMakeLists.txt  README.md
components/webui/src/: webui.c  webui_api.c  webui_html.c
docs/: ACD_CONFLICT_REPORTING.md  API_Endpoints.md  ASSEMBLY_DATA_LAYOUT.md  CODE_REVIEW_ISSUES.md  FILE_OBJECT_INTEGRATION.md  IP101_REGISTER_VERIFICATION.md  MEDIA_COUNTERS_IMPLEMENTATION.md  OPENER_FILE_OBJECT_INTEGRATION.md  OTA_UPLOAD_FIX.md  WIRESHARK_FILTERS.md  doxygen_topics.h
eds/: ESP32P4_OPENER.eds  ESP32P4_OPENER.eds.ebf
main/: CMakeLists.txt  main.c
scripts/: README_CLEAN.md
(+969 files in other folders)
