idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        opener
        lwip
        esp_netif
        esp_event
        esp_eth
        driver
        freertos
        nvs_flash
        webui
        modbus_tcp
        system_config
        ota_manager
        log_buffer
        nau7802
)
